# visual_odometry

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  activation.sh  pixi.toml  sonar-project.properties
.beads/: config.yaml  issues.jsonl
.claude/: claude.md  ralph-loop.local.md
.claude/agents/: code-reviewer.md  coder.md  project-manager.md  test-runner.md
.github/workflows/: ci.yml  pre-commit.yml  sonarcloud.yml
benchmarks/: benchmark_matchers.cpp
data/: README.md  kitti_camera.yaml  tum_camera.yaml
data/tum/: README.md
docs/: ARCHITECTURE.md  DESIGN_AND_STANDARDS.md
include/visual_odometry/: feature_detector.hpp  feature_matcher.hpp  image_loader.hpp  image_matcher.hpp  matcher_concept.hpp  motion_estimator.hpp  onnx_session.hpp  trajectory.hpp  visual_odometry.hpp
python/visual_odometry/: __init__.py
scripts/: compare_matchers.py  compare_trajectories.py  download_kitti_sample.sh  download_tum.sh  generate_test_trajectory.py  live_visualization.py  match_anything.py  plot_trajectory.py  plot_trajectory_error.py  requirements.txt  test_trajectory_tools.py  test_viser.py  trajectory_utils.py  visualize_trajectory.py
scripts/tests/: test_generate_trajectory.py  test_plot_trajectory.py  test_trajectory_utils.py
src/: feature_detector.cpp  feature_matcher.cpp  image_loader.cpp  image_matcher.cpp  main.cpp  motion_estimator.cpp  onnx_session.cpp  python_bindings.cpp  trajectory.cpp  visual_odometry.cpp
tests/: CMakeLists.txt  lsan_suppressions.txt  test_feature_detector.cpp  test_feature_matcher.cpp  test_image_loader.cpp  test_lightglue_matcher.cpp  test_main.cpp  test_motion_estimator.cpp  test_onnx_session.cpp  test_trajectory.cpp
